k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: erp-ingress
  namespace: erp

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/certificate-arn: YOUR_ACM_CERTIFICATE_ARN

spec:

  ingressClassName: alb

  rules:

    - host: myerp.com

      http:

        paths:

          - path: /api

            pathType: Prefix

            backend:

              service:
                name: backend
                port:
                  number: 8000

          - path: /

            pathType: Prefix

            backend:

              service:
                name: frontend
                port:
                  number: 3000
